agregando style.css l index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial de git</title>
 </head>
+<link rel="stylesheet" href="styles.css">
 <body>
     <h1>Aprendiendo con el Ing. Adolfo</h1>
-    <p>Mis prieros pasos en git</p>
+    <p>Mis prieros pasos en git desde la rama principal</p>
 </body>
 </html>
