--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Aprendiendo con el Ing. Adolfo</h1>
-    <p>Mis prieros pasos en git</p>
+    <p>Mis prieros pasos en git agregado desde la rama html</p>
+    <ol>
+        <li>elemento 1</li>
+        <li>elemento 2</li>
+        <li>elemento 3</li>
+        <li>elemento 4</li>
+        <li>elemento 5</li>
+    </ol>
+
+
+    <script src="index.js"></script>
 </body>
 </html>
